[build-system]
requires = ["setuptools>=61.0.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
py_limited_api = "cp38"

[project]
name = "vectordba"
version = "0.1.3"
dependencies = [
    "pymongo>=4.16.0",
    "certifi>=2024.0.0",
    "python-dotenv>=1.0.0"
]

authors = [{ name="Satish Kumar", email="satishlangayan@gmail.com" }, ]
description = "Agentic MongoDB NLP Database Interface"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
